# Kraken

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Demos/TappyBird/: CMakeLists.txt
Demos/TappyBird/src/: Tappy.cpp
Kraken/: CMakeLists.txt
Kraken/assets/: Renderer2D_Quad.glsl  Renderer2D_Text.glsl  VKDemo.glsl
Kraken/src/: Kraken.h  krpch.cpp  krpch.h
Kraken/src/Kraken/Assets/: Asset.cpp  Asset.h
Kraken/src/Kraken/Core/: Application.cpp  Application.h  Assert.h  Asset.h  Base.h  Entrypoint.h  Layer.cpp  Layer.h  Layerstack.cpp  Layerstack.h  Log.cpp  Log.h  Time.h
Kraken/src/Kraken/Debug/: ImGuiLayer.cpp  ImGuiLayer.h  Instrumentor.h
Kraken/src/Kraken/Events/: ApplicationEvents.h  Event.h  KeyEvents.h  MouseEvents.h
Kraken/src/Kraken/Graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Kraken/src/Kraken/IO/: GLFW.cpp  GLFW.h  Input.cpp  Input.h  KeyCodes.h  MouseCodes.h  Window.cpp  Window.h
Kraken/src/Kraken/Math/: Color.h
Kraken/src/Kraken/Platform/: KRImGui.cpp  KRImGui.h  PlatformUtils.h  Time.h
Kraken/src/Kraken/Platform/GLFW/: GLFW.cpp  GLFW.h
Kraken/src/Kraken/Platform/OSX/: OSX.cpp
Kraken/src/Kraken/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphicsAPI.cpp  OpenGLGraphicsAPI.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Kraken/src/Kraken/Platform/Vulkan/: VKContext.cpp  VKContext.h  VKGraphicsAPI.cpp  VKGraphicsAPI.h  VKShader.cpp  VKShader.h  VKUtil.cpp  VKUtil.h
Kraken/src/Kraken/Platform/Windows/: Windows.cpp
Kraken/src/Kraken/Renderer/: Font.cpp  Font.h  Renderer2D.cpp  Renderer2D.h  Sprite.cpp  Sprite.h
Kraken/src/Kraken/Utils/: Files.cpp  Files.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Resource.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: Sandbox.glsl
Sandbox/assets/textures/: Overworld.sht
Sandbox/src/: Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h
docs/: for-developers.md
libs/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
scripts/: build-run-sanbox.sh  cmake-build.sh  cmake-configure.sh  fix-dependencies.sh
vcpkg-overlay/: glad.cmake
